--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,9 +35,11 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+
   http: ^1.0.0
   google_fonts: ^5.0.0
   flutter_screenutil: ^5.8.4
+  cached_network_image: ^3.2.1
 
 dev_dependencies:
   flutter_test:
