--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   google_fonts: ^5.0.0
   flutter_screenutil: ^5.8.4
   cached_network_image: ^3.2.1
+  url_launcher: ^6.1.12
 
 dev_dependencies:
   flutter_test:
